--- a/src/components/TodoList/Todolist.module.css
+++ b/src/components/TodoList/Todolist.module.css
@@ -11,14 +11,36 @@
 	min-height: 300px;
 }
 
+.titleTodo {
+	font-size: 34px;
+	margin-bottom: 25px;
+	border: 1px solid black;
+	border-radius: 10px;
+	padding: 10px;
+	background-color: #c6cbd0;
+	text-align: center;
+	display: flex;
+	justify-content: space-between;
+}
+
 .taskList li {
 	list-style: none;
 	display: flex;
 	gap: 10px;
 }
 
+.checkBox {
+	width: 30px;
+}
+
 .taskList span {
 	flex: 1 1 auto;
+}
+
+.textTask {
+	font-size: 20px;
+	text-transform: uppercase;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .taskList {
