--- a/src/components/TodoList/ButtonInput/Button.module.css
+++ b/src/components/TodoList/ButtonInput/Button.module.css
@@ -9,3 +9,18 @@
 .inputError:focus {
 	border: 4px solid red;
 }
+
+.wrapForInputBtn {
+	display: flex;
+	margin: 20px auto;
+	width: 185px;
+	height: 40px;
+	position: relative;
+}
+
+.errorText {
+	color: red;
+	position: absolute;
+	bottom: -22px;
+	left: 0;
+}
